--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Dependencies
 ## Avoid any node_modules folders anywhere in the repo;
-node_modules
+node_modules/
 
 ## Avoid package*.json files only at repo root
 /package.json
