--- a/app/public/wp-content/themes/manonemusic/package.json
+++ b/app/public/wp-content/themes/manonemusic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "manonemusic",
-"version": "1.0.0",
+  "version": "1.0.0",
   "description": "Manone Music",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
   ],
   "author": "Juli Scapucin",
   "devDependencies": {
-    "@wordpress/scripts": "^27.7.0"
+    "@wordpress/scripts": "^27.7.0",
+    "tailwindcss": "^3.4.3"
   }
 }
