--- a/app/public/wp-content/themes/manonemusic/package.json
+++ b/app/public/wp-content/themes/manonemusic/package.json
@@ -4,7 +4,7 @@
   "description": "Manone Music",
   "main": "index.js",
   "scripts": {
-    "start": "wp-scripts start src/index.js blocks/home.js",
+    "start": "wp-scripts start src/index.js blocks/home.js blocks/customheading.js",
     "dev": "wp-scripts start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
