--- a/app/public/wp-content/themes/manonemusic/package.json
+++ b/app/public/wp-content/themes/manonemusic/package.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "@wordpress/scripts": "^27.7.0",
     "tailwindcss": "^3.4.3"
+  },
+  "dependencies": {
+    "@wordpress/icons": "^9.47.0"
   }
 }
