--- a/app/public/wp-content/plugins/manonemusic/package.json
+++ b/app/public/wp-content/plugins/manonemusic/package.json
@@ -15,6 +15,7 @@
 		"start": "wp-scripts start"
 	},
 	"devDependencies": {
-		"@wordpress/scripts": "^27.7.0"
+		"@wordpress/scripts": "^27.7.0",
+		"tailwindcss": "^3.4.3"
 	}
 }
