horizontal-scroll: add gsap

--- a/app/public/wp-content/themes/manonemusic/package.json
+++ b/app/public/wp-content/themes/manonemusic/package.json
@@ -17,6 +17,7 @@
     "tailwindcss": "^3.4.3"
   },
   "dependencies": {
-    "@wordpress/icons": "^9.47.0"
+    "@wordpress/icons": "^9.47.0",
+    "gsap": "^3.12.5"
   }
 }
