design-base: add gsap SplitText

--- a/app/public/wp-content/themes/manonemusic/package.json
+++ b/app/public/wp-content/themes/manonemusic/package.json
@@ -18,6 +18,6 @@
   },
   "dependencies": {
     "@wordpress/icons": "^9.47.0",
-    "gsap": "^3.12.5"
+    "gsap": "npm:@gsap/shockingly@^3.12.5"
   }
 }
