--- a/app/public/wp-content/plugins/manonemusic/package.json
+++ b/app/public/wp-content/plugins/manonemusic/package.json
@@ -6,16 +6,19 @@
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
+		"starttailwind": "npx tailwindcss -i ./style.css -o ./build/style-index.css --watch",
+		"buildtailwind": "npx tailwindcss -i ./style.css -o ./build/style-index.css",
 		"build": "wp-scripts build",
 		"format": "wp-scripts format",
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
 		"packages-update": "wp-scripts packages-update",
 		"plugin-zip": "wp-scripts plugin-zip",
-		"start": "wp-scripts start"
+		"start": "concurrently --kill-others \"wp-scripts start\" \"npm run starttailwind\""
 	},
 	"devDependencies": {
 		"@wordpress/scripts": "^27.7.0",
+		"concurrently": "^8.2.2",
 		"tailwindcss": "^3.4.3"
 	}
 }
