--- a/app/public/wp-content/.vscode/settings.json
+++ b/app/public/wp-content/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"php.validate.executablePath": "/usr/local/bin/php"
+	"php.validate.executablePath": "/Users/juliscapucin/Library/Application Support/Local/run/vxchysUDO/conf/php/php.ini"
 }
